--- a/PULSE/appsettings.json
+++ b/PULSE/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost, 1434;Initial Catalog=PULSEdb; user=sa; Password=QWEasd123!"
+    "DefaultConnection": "Data Source=localhost, 1434;Initial Catalog=PULSE; user=sa; Password=QWEasd123!"
   },
   "Logging": {
     "LogLevel": {
