--- a/pulse_mobile/pubspec.yaml
+++ b/pulse_mobile/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^0.13.5
   intl: ^0.18.0
   provider: ^6.0.5
+  non_linear_slider: ^0.0.1
 
 dev_dependencies:
   flutter_test:
