--- a/PULSE/appsettings.json
+++ b/PULSE/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost, 1434;Initial Catalog=PULSE; user=sa; Password=QWEasd123!"
+    "DefaultConnection": "Data Source=192.168.1.6, 1434;Initial Catalog=PULSE; user=sa; Password=QWEasd123!"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "https://0.0.0.0:7098",
+        "Certificate": {
+          "Path": "./certificate.pfx",
+          "Password": "PASSWORD"
+        }
+      }
+    }
+  }
 }
