--- a/PULSE/appsettings.json
+++ b/PULSE/appsettings.json
@@ -9,3 +9,21 @@
     }
   }
 }
+//{
+//  "ConnectionStrings": {
+//    "DefaultConnection": "Data Source=192.168.1.18, 1434;Initial Catalog=PULSE; user=sa; Password=QWEasd123!"
+//  },
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Information",
+//      "Microsoft.AspNetCore": "Warning"
+//    }
+//  },
+//  "Kestrel": {
+//    "Endpoints": {
+//      "Http": {
+//        "Url": "http://0.0.0.0:5000"
+//      }
+//    }
+//  }
+//}
