--- a/pulse_admin/pubspec.yaml
+++ b/pulse_admin/pubspec.yaml
@@ -40,8 +40,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   json_annotation: ^4.7.0
   http: ^0.13.5
-  intl: ^0.19.0
+  intl: 0.18.1
   provider: ^6.1.2
+  form_validator: ">=0.1.1 <2.0.0"
+  flutter_form_builder: 9.1.0
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
