--- a/pulse_admin/pubspec.yaml
+++ b/pulse_admin/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_form_builder: 9.1.0
   form_builder_validators: 9.1.0
   fluttertoast: ^8.2.4
+  image_picker: ^0.8.0+6
 
 dev_dependencies:
   flutter_test:
