--- a/pulse_admin/pubspec.yaml
+++ b/pulse_admin/pubspec.yaml
@@ -39,14 +39,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   json_annotation: ^4.7.0
-  http: ^0.13.5
-  intl: 0.18.1
+  http: ^1.2.1
+  intl: ^0.19.0
   provider: ^6.1.2
-  form_validator: ">=0.1.1 <2.0.0"
-  flutter_form_builder: 9.1.0
-  form_builder_validators: 9.1.0
+  form_validator: ^2.1.1
+  flutter_form_builder: ^9.3.0
+  form_builder_validators: ^10.0.1
   fluttertoast: ^8.2.4
-  image_picker: ^0.8.0+6
+  image_picker: ^1.1.2
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   flutter_test:
@@ -57,7 +58,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
   build_runner: ^2.3.3
   json_serializable: ^6.5.40
 
