--- a/pulse_admin/pubspec.yaml
+++ b/pulse_admin/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   fluttertoast: ^8.2.4
   image_picker: ^1.1.2
   fl_chart: ^0.68.0
+  flutter_paypal: ^0.2.1
 
 dev_dependencies:
   flutter_test:
