bug fixes and wrap up

--- a/PULSE.Services/PULSE.Services.csproj
+++ b/PULSE.Services/PULSE.Services.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
     <PackageReference Include="Microsoft.ML" Version="3.0.1" />
     <PackageReference Include="Microsoft.ML.Recommender" Version="0.21.1" />
+	 <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,6 +25,7 @@
   <ItemGroup>
     <Folder Include="Implementation\Abstract\" />
     <Folder Include="Interfaces\Abstract\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
   <ItemGroup>
