--- a/pulse_mobile/pubspec.yaml
+++ b/pulse_mobile/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.18.0
   provider: ^6.0.5
   non_linear_slider: ^0.0.1
+  flutter_paypal: ^0.2.0
 
 dev_dependencies:
   flutter_test:
