--- a/PULSE.Messenger/PULSE.Messenger.csproj
+++ b/PULSE.Messenger/PULSE.Messenger.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 	
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
